# rapyuta-demos

ansible/: README.md
ansible/niryo/: deploy_configs_template.yaml  niryo_sim_package.json  sim_deploy.yaml
base_docker/: Dockerfile  ros_entrypoint.sh  run-turtle.sh  start.sh
base_docker/html/: _env.js  app.js  env.template.js  index.html
base_docker/src/common/install/: no_vnc.sh
base_docker/src/common/xfce/: wm_startup.sh
base_docker/src/ubuntu/install/: libnss_wrapper.sh
helpers/: kernel_generator.py
helpers/cloudserver/: CMakeLists.txt  package.xml  setup.py
helpers/cloudserver/launch/: cloudserver.launch
helpers/cloudserver/scripts/: run_cloudserver
helpers/server/: CMakeLists.txt  package.xml  setup.py
helpers/server/launch/: superserver.launch
helpers/server/scripts/: run_superserver
helpers/server/src/superserver/: server.py  server_handlers.py
niryo/: Dockerfile  fake_with_web.launch  real_with_web.launch  start.sh
niryo/content/: Niryo.ipynb  niryo.rviz
niryo/jitsi_connector/: index.html
niryo/kompose_interactive_markers/: CMakeLists.txt  package.xml
niryo/kompose_interactive_markers/launch/: kompose.launch  miniature.launch
niryo/kompose_interactive_markers/src/: main.cpp  msg.yml
turtlebot3/: Dockerfile  fake_with_web.launch
