<?xml version="1.0"?>
<package format="3">
  <name>cloudserver</name>
  <version>0.1.0</version>
  <description>A server for all of rosbridge.</description>

  <license>BSD</license>

  <author email="wolf.vollprecht@quantstack.net">Wolf Vollprecht</author>
  <maintainer email="wolf.vollprecht@quantstack.net">Wolf Vollprecht</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rosbridge_server</exec_depend>
</package>