<?xml version="1.0"?>
<package format="2">
  <name>kompose_interactive_markers</name>
  <version>0.0.1</version>
  <description>RAAAAA</description>
  <maintainer email="w.vollprecht@gmail.com">Wolf Vollprecht</maintainer>

  <license>proprietary</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_robot_interaction</build_depend>
  <build_depend>moveit_robot_interaction</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <exec_depend>moveit_ros_robot_interaction</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_ros_planning</exec_depend>
</package>
